--- a/webproject/mysite/templates/calendar/schedule_week.html
+++ b/webproject/mysite/templates/calendar/schedule_week.html
@@ -40,7 +40,7 @@
       >시간</th>
       {% for day in days %}
         <th {% if day == today %}
-        class=""
+        class="border border-3 border-primary"
         {% endif %}
         >{{ day|date:"m/d (D)" }}</th>
       {% endfor %}
