--- a/webproject/mysite/templates/base.html
+++ b/webproject/mysite/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <title>SASA Calendar</title>
+    <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/png">
 </head>
 <style>
   #calendarOptions {
@@ -22,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
 
-        <a class="navbar-brand" href="{% url 'calendar:index' %}">Calendar</a>
+        <a class="navbar-brand" href="{% url 'calendar:index' %}">SASA Calendar</a>
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent"
@@ -50,16 +51,23 @@
 
             <div class="d-flex align-items-center flex-wrap">
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_replace'%}">AI 일정 재배치</a>
+                {% if not has_ai_session %}
                 <a class="btn btn-outline-primary me-2" href="{% url 'calendar:schedule_create' %}">일정 추가</a>
+                {% endif %}
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_week' %}">주간 보기</a>
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:index' %}">월간 보기</a>
+                {% if not has_ai_session %}
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_list' %}">일정 목록</a>
+                {% endif %}
                 <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:schedule_type_list' %}">분류 관리</a>
+                
                 <!-- 옵션 펼치기 버튼 -->
                 <button class="btn btn-outline-dark me-2" type="button" data-bs-toggle="collapse"
                         data-bs-target="#calendarOptions" aria-expanded="false" aria-controls="calendarOptions">
                     옵션
                 </button>
+                <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:how_to_use' %}">사용 가이드</a>
+                <a class="btn btn-outline-secondary me-2" href="{% url 'calendar:test' %}">test button</a>
             </div>
         </div>
     </div>
