--- a/webproject/mysite/templates/calendar/schedule_form.html
+++ b/webproject/mysite/templates/calendar/schedule_form.html
@@ -4,7 +4,23 @@
     <h2>{{ is_edit|yesno:"일정 수정,일정 추가" }}</h2>
     <form method="post" class="d-flex flex-column align-items-start">
         {% csrf_token %}
-
+        {% if form.errors %}
+        <div class="alert alert-danger">
+            <ul class="mb-0">
+                {% for field in form %}
+                    {% if field.errors %}
+                        <li><strong>{{ field.label }}</strong>
+                            <ul>
+                                {% for error in field.errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
         <!-- 기본 필드 렌더링 -->
         {{ form.task_name.label_tag }} {{ form.task_name }}
         {{ form.duration_minutes.label_tag }} {{ form.duration_minutes }}
