--- a/webproject/mysite/templates/calendar/schedule_week.html
+++ b/webproject/mysite/templates/calendar/schedule_week.html
@@ -70,6 +70,7 @@
               <p><strong>마감일:</strong> <span id="detailDeadline"></span></p>
               <p><strong>고정 일정:</strong> <span id="detailFixed"></span></p>
               <p><strong>시험 여부:</strong> <span id="detailExam"></span></p>
+              <p><strong>소요 시간:</strong> <span id="detailTime"></span></p>
             </div>
             <div class="modal-footer" id="editbuttons">
               <a href="#" id="editTaskLink" class="btn btn-primary">수정</a>
