--- a/webproject/mysite/templates/calendar/schedule_list.html
+++ b/webproject/mysite/templates/calendar/schedule_list.html
@@ -101,8 +101,9 @@
               <div class="modal-body">
                 <p><strong>과목:</strong> <span id="detailSubject"></span></p>
                 <p><strong>마감일:</strong> <span id="detailDeadline"></span></p>
-                <p><strong>고정 일정:</strong> <span id="detailFixed"></span></p>
+                <p><strong>고정 여부:</strong> <span id="detailFixed"></span></p>
                 <p><strong>시험 여부:</strong> <span id="detailExam"></span></p>
+                <p><strong>소요 시간:</strong> <span id="detailTime"></span></p>
               </div>
               <div class="modal-footer" id="editbuttons">
                 <a href="#" id="editTaskLink" class="btn btn-primary">수정</a>
